--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --font-family: "Source Sans 3", sans-serif;
+    --font-family: 'Source Sans 3', sans-serif;
     --content-width: 1180px;
     --container-offset: 15px;
     --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
