Разбор со шрифтами

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -30,7 +30,7 @@
 
 @font-face {
     font-family: "Source Sans 3";
-    src: url(../fonts/SourceSans3Regular.woff2) format("woff2");
+    src: url(../font/SourceSans3Bold.woff2) format("woff2");
     font-weight: 400;
     font-display: swap;
     font-style: normal
