--- a/web/css/main.css
+++ b/web/css/main.css
@@ -14,6 +14,13 @@
     --light-gray: #f5f5f5
 }
 
+
+body{
+    font-family: "Source Sans 3",sans-serif;
+}
+h2{
+    font-family: "Source Sans 1", sans-serif; 
+}
 .custom-checkbox__field:checked+.custom-checkbox__content::after {
     opacity: 1
 }
@@ -28,29 +35,7 @@
     pointer-events: none
 }
 
-@font-face {
-    font-family: "Source Sans 3";
-    src: url(../font/SourceSans3Bold.woff2) format("woff2");
-    font-weight: 400;
-    font-display: swap;
-    font-style: normal
-}
 
-@font-face {
-    font-family: "Source Sans 3";
-    src: url(../fonts/SourceSans3SemiBold.woff2) format("woff2");
-    font-weight: 600;
-    font-display: swap;
-    font-style: normal
-}
-
-@font-face {
-    font-family: "Source Sans 3";
-    src: url(../fonts/SourceSans3Bold.woff2) format("woff2");
-    font-weight: 700;
-    font-display: swap;
-    font-style: normal
-}
 
 html {
     -webkit-box-sizing: border-box;
