Сделан минимальный UX

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -444,7 +444,8 @@ a {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    gap: 44px
+    gap: 44px;
+   
 }
 
 .nav__list--footer {
@@ -452,31 +453,52 @@ a {
     -webkit-columns: 2;
     -moz-columns: 2;
     columns: 2;
-    max-width: 343px
+    max-width: 343px;
+    color: #fff;
 }
+
 
 .nav__item--footer:not(:last-child) {
-    margin-bottom: 24px
+    margin-bottom: 24px;
+    
+}
+.nav__link {
+	position: relative;
+    
+	font-size: 1.25rem;
+	text-decoration: none;
 }
 
+.nav__link::before {
+	content: '';
+	position: absolute;
+	left: 0; bottom: -5px;
+	width: 0;
+	height: 1.5px;
+	background-color: red;
+}
+
+.nav__link:hover:before {
+	width: 100%;
+}
+
+.nav__link::before {
+	transition: width 0.35s;
+}
 .nav__link {
     font-weight: 400;
     font-size: 16px;
     line-height: 120%;
-    color: var(--dark)
-}
-
-.nav__link--footer {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 120%;
-    color: var(--light)
+    color: var(--dark);
+    
 }
 
 .hero__top {
     margin-bottom: var(--lg)
 }
-
+.nav__link--footer{
+    color: #fff;
+}
 .hero__title {
     -ms-grid-column-span: 6;
     grid-column: 6 span;
