--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1130,3 +1130,35 @@ line-height: 120%;
 color: var(--dark);
 text-align: center;
 }
+.laser-index {
+    text-align: center;
+    margin-top: 50px; /* Регулируйте отступ сверху по вашему усмотрению */
+}
+
+.page-title {
+    color: #333; /* Цвет заголовка */
+}
+
+.contact-form {
+    margin-top: 20px; /* Регулируйте отступ сверху формы по вашему усмотрению */
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.btn-primary {
+    background-color: #007bff; /* Основной цвет кнопки */
+    color: #fff; /* Цвет текста на кнопке */
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Анимация изменения цвета фона */
+}
+
+.btn-primary:hover {
+    background-color: #0056b3; /* Цвет фона при наведении курсора */
+}
