Изменение названия полей в форме

--- a/МОЙ ПРОЕКТ/css/main.css
+++ b/МОЙ ПРОЕКТ/css/main.css
@@ -1017,3 +1017,11 @@ a {
     text-align: center;
     color: var(--light)
 }
+
+.footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    
+}
