--- a/web/css/main.css
+++ b/web/css/main.css
@@ -92,7 +92,9 @@ a {
 .list-reset {
     list-style: none;
     margin: 0;
-    padding: 0
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .input-reset {
